test/types/records/ferguson/missing-functions/no-assign-error.good
no-assign-error.chpl:12: In function 'main':
no-assign-error.chpl:17: error: You can't assign an R
